--- a/index.html
+++ b/index.html
@@ -128,5 +128,6 @@
     </footer>
     <!-- <script src="./assets/js/slider.js"></script> -->
     <!-- <script src="./assets/js/avatares.js"></script> -->
+    <script src="./assets/js/slider.js"></script>
 </body>
 </html>
