--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                 <div id="slider">
                     <img id="flechaIzd" src="./assets/img/flecha_izd.png" alt="">
                     <img id="flechaDer" src="./assets/img/flecha_der.png" alt="">
-                    <img id="fotoActiva" orden="1" src="./assets/img/slider1_2560.jpg" alt="">                
+                    <img id="fotoActiva" orden="1" src="./assets/img/slider1_2560.jpg" alt="">
+                    <!-- EL ATRIBUTO orden ES UN ATRIBUTO INVENTADO, NO RESERVADO COMO src O id. LO NECESITAMOS PARA INICIALIZAR LA NUMERACION DE FOTOS EN JAVASCRIPT: ARCHIVO slider.js -->                
                 </div>
                 <h3 class="anchoEstrecho">El mejor album fotografico para recordar los momentos mas especiales</h3>
                 <p class="anchoEstrecho">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error aperiam porro consequatur quibusdam obcaecati quaerat voluptate consequuntur eveniet. Aperiam ex assumenda ratione natus maiores numquam provident vel eos harum ad!</p>
