--- a/index.html
+++ b/index.html
@@ -42,64 +42,64 @@
     <main>       
         <!-- SECCION SERVICIOS -->
         <section>
-        <h2>Nuestros servicios fotograficos</h2>
-        <article class=""anchoEstrecho">
-            <h3>TUS FOTOGRAFOS EN DONOSTI</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error <b>saepe facere</b> inventore in sit asperiores soluta labore assumenda ducimus impedit, officiis voluptatibus dignissimos modi et, sapiente esse ipsum culpa quam!</p>
-            <p></p>
-            <div class="boton">
-                Contactar
-            </div>
-        </article>
-        <article class=""anchoEstrecho">
-            <h3>SOMOS UN EQUIPO DE FOTOGRAFOS PROFESIONALES EN DONOSTIA</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, debitis!</p>
-            <div id="contenedorservicios">
-                <div class="servicio">
-                    <div class="contenedor_foto">
-                        <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
-                    </div>
-                    <h4>Embarazos y bebés</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
+            <h2>Nuestros servicios fotograficos</h2>
+            <article class="anchoEstrecho">
+                <h3>TUS FOTOGRAFOS EN DONOSTI</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error <b>saepe facere</b> inventore in sit asperiores soluta labore assumenda ducimus impedit, officiis voluptatibus dignissimos modi et, sapiente esse ipsum culpa quam!</p>
+                <p></p>
+                <div class="boton">
+                    Contactar
                 </div>
-                <div class="servicio">
-                    <div class="contenedor_foto">
-                        <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+            </article>
+            <article class="anchoEstrecho">
+                <h3>SOMOS UN EQUIPO DE FOTOGRAFOS PROFESIONALES EN DONOSTIA</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, debitis!</p>
+                <div id="contenedorservicios">
+                    <div class="servicio">
+                        <div class="contenedor_foto">
+                            <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                        </div>
+                        <h4>Embarazos y bebés</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
                     </div>
-                    <h4>Embarazos y bebés</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
-                </div>
-                <div class="servicio">
-                    <div class="contenedor_foto">
-                        <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                    <div class="servicio">
+                        <div class="contenedor_foto">
+                            <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                        </div>
+                        <h4>Embarazos y bebés</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
                     </div>
-                    <h4>Embarazos y bebés</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
-                </div>
-                <div class="servicio">
-                    <div class="contenedor_foto">
-                        <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                    <div class="servicio">
+                        <div class="contenedor_foto">
+                            <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                        </div>
+                        <h4>Embarazos y bebés</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
                     </div>
-                    <h4>Embarazos y bebés</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
-                </div>
-                <div class="servicio">
-                    <div class="contenedor_foto">
-                        <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                    <div class="servicio">
+                        <div class="contenedor_foto">
+                            <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                        </div>
+                        <h4>Embarazos y bebés</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
                     </div>
-                    <h4>Embarazos y bebés</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
-                </div>
-                <div class="servicio">
-                    <div class="contenedor_foto">
-                        <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                    <div class="servicio">
+                        <div class="contenedor_foto">
+                            <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                        </div>
+                        <h4>Embarazos y bebés</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
                     </div>
-                    <h4>Embarazos y bebés</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
-                </div>              
+                    <div class="servicio">
+                        <div class="contenedor_foto">
+                            <img src="./assets/img/servicio_1_600.jpg" alt="servicio">
+                        </div>
+                        <h4>Embarazos y bebés</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, dolorem.</p>
+                    </div>              
 
-            </div>
-        </article>
+                </div>
+            </article>
         </section>
 
         <!-- SLIDER ALBUM -->
@@ -162,10 +162,34 @@
             
     </main>
     <footer>
+        <div id="Logofooter">
+        </div>
+        <div id="ContentFooter">
+        <div id="LogoFooter">
+
+        </div>
+        <div id="SupFooter">
+       <div class="infoSupFooter"></div>
+       <div class="infoSupFooter"></div>
+       <div class="infoSupFooter"></div>           
+
+        </div>
+
+        <div id="AbajoFooter">
+            <p>Aviso legal y cookies</p>
+            <p>Copiright MAGP</p>
+        </div>
+
+
+
+
+    </div>
+
 
     </footer>
     <!-- <script src="./assets/js/slider.js"></script> -->
     <!-- <script src="./assets/js/avatares.js"></script> -->
     <script src="./assets/js/slider.js"></script>
+    <script src="./assets/js/avatares.js"></script>
 </body>
 </html>
