--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="shortcut icon" href="../assets/img/ICONO_150.png" type="image/x-icon">
 </head>
 <body>
+    <input type="checkbox" name="toggle" id="toggle">
+    <label for="toggle" class="contenedor_span">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
+
     <nav>
         <!-- Esto es el Nav y tiene dos divs -->
         
